FCurves.range() returns wrong values for one-point curves (sic!) #28961

Closed
opened 2011-10-18 13:48:36 +02:00 by Tomasz Lenarcik · 4 comments

%%%When the method range() is called on a curve which contains only one control point it returns an interval of type (frame, frame+1), where frame is the first coordinate of the unique control point. However, we would rather expect this method to return the interval (frame, frame), right?%%%

%%%When the method range() is called on a curve which contains only one control point it returns an interval of type (frame, frame+1), where frame is the first coordinate of the unique control point. However, we would rather expect this method to return the interval (frame, frame), right?%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r41245.%%%

%%%fixed r41245.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

%%%Nice, thx :)%%%

%%%Nice, thx :)%%%
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#28961
No description provided.