fix [#28961] FCurves.range() returns wrong values for one-point curves (sic!) also fix for case where verts were treated as found but were infact not because none were selected.